; ModuleID = '/home/carl/AnghaBench/rufus/src/extr_drive.c_AltGetLogicalName.c'
source_filename = "/home/carl/AnghaBench/rufus/src/extr_drive.c_AltGetLogicalName.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64, i64*, i32* }

@SelectedDrive = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@MAX_PATH = common dso_local global i32 0, align 4
@MAX_PARTITIONS = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [62 x i8] c"Error: Could not find a partition at offset %lld on this disk\00", align 1
@.str.1 = private unnamed_addr constant [56 x i8] c"Error: Searching for a partition on a non matching disk\00", align 1
@.str.2 = private unnamed_addr constant [24 x i8] c"Harddisk%luPartition%lu\00", align 1
@groot_name = common dso_local global i32 0, align 4
@groot_len = common dso_local global i64 0, align 8
@.str.3 = private unnamed_addr constant [46 x i8] c"Could not find a DOS volume name for '%s': %s\00", align 1
@.str.4 = private unnamed_addr constant [35 x i8] c"\\\\.\\PhysicalDrive%lu%s %I64u %I64u\00", align 1
@.str.5 = private unnamed_addr constant [2 x i8] c"\\\00", align 1
@.str.6 = private unnamed_addr constant [1 x i8] zeroinitializer, align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @AltGetLogicalName(i64 %0, i64 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i64, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i8*, align 8
  %13 = alloca i64, align 8
  %14 = alloca [64 x i8], align 16
  store i64 %0, i64* %5, align 8
  store i64 %1, i64* %6, align 8
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %15 = load i64, i64* %5, align 8
  %16 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @SelectedDrive, i32 0, i32 0), align 8
  %17 = icmp eq i64 %15, %16
  %18 = zext i1 %17 to i32
  store i32 %18, i32* %9, align 4
  store i8* null, i8** %11, align 8
  %19 = load i32, i32* @MAX_PATH, align 4
  %20 = zext i32 %19 to i64
  %21 = call i8* @llvm.stacksave()
  store i8* %21, i8** %12, align 8
  %22 = alloca i8, i64 %20, align 16
  store i64 %20, i64* %13, align 8
  %23 = load i64, i64* %5, align 8
  %24 = call i32 @CheckDriveIndex(i64 %23)
  %25 = load i64, i64* %6, align 8
  %26 = icmp eq i64 %25, 0
  br i1 %26, label %27, label %28

27:                                               ; preds = %4
  store i64 0, i64* %10, align 8
  br label %60

28:                                               ; preds = %4
  %29 = load i32, i32* %9, align 4
  %30 = icmp ne i32 %29, 0
  br i1 %30, label %31, label %57

31:                                               ; preds = %28
  store i64 0, i64* %10, align 8
  br label %32

32:                                               ; preds = %46, %31
  %33 = load i64, i64* %10, align 8
  %34 = load i64, i64* @MAX_PARTITIONS, align 8
  %35 = icmp slt i64 %33, %34
  br i1 %35, label %36, label %43

36:                                               ; preds = %32
  %37 = load i64, i64* %6, align 8
  %38 = load i64*, i64** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @SelectedDrive, i32 0, i32 1), align 8
  %39 = load i64, i64* %10, align 8
  %40 = getelementptr inbounds i64, i64* %38, i64 %39
  %41 = load i64, i64* %40, align 8
  %42 = icmp ne i64 %37, %41
  br label %43

43:                                               ; preds = %36, %32
  %44 = phi i1 [ false, %32 ], [ %42, %36 ]
  br i1 %44, label %45, label %49

45:                                               ; preds = %43
  br label %46

46:                                               ; preds = %45
  %47 = load i64, i64* %10, align 8
  %48 = add nsw i64 %47, 1
  store i64 %48, i64* %10, align 8
  br label %32

49:                                               ; preds = %43
  %50 = load i64, i64* %10, align 8
  %51 = load i64, i64* @MAX_PARTITIONS, align 8
  %52 = icmp sge i64 %50, %51
  br i1 %52, label %53, label %56

53:                                               ; preds = %49
  %54 = load i64, i64* %6, align 8
  %55 = call i32 (i8*, ...) @suprintf(i8* getelementptr inbounds ([62 x i8], [62 x i8]* @.str, i64 0, i64 0), i64 %54)
  br label %111

56:                                               ; preds = %49
  br label %59

57:                                               ; preds = %28
  %58 = call i32 (i8*, ...) @suprintf(i8* getelementptr inbounds ([56 x i8], [56 x i8]* @.str.1, i64 0, i64 0))
  br label %111

59:                                               ; preds = %56
  br label %60

60:                                               ; preds = %59, %27
  %61 = getelementptr inbounds [64 x i8], [64 x i8]* %14, i64 0, i64 0
  %62 = load i64, i64* %5, align 8
  %63 = load i64, i64* %10, align 8
  %64 = add nsw i64 %63, 1
  %65 = inttoptr i64 %64 to i8*
  %66 = call i32 (i8*, i8*, i64, i8*, ...) @static_sprintf(i8* %61, i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.2, i64 0, i64 0), i64 %62, i8* %65)
  %67 = load i32, i32* @groot_name, align 4
  %68 = call i32 @static_strcpy(i8* %22, i32 %67)
  %69 = getelementptr inbounds [64 x i8], [64 x i8]* %14, i64 0, i64 0
  %70 = load i64, i64* @groot_len, align 8
  %71 = getelementptr inbounds i8, i8* %22, i64 %70
  %72 = load i32, i32* @MAX_PATH, align 4
  %73 = sext i32 %72 to i64
  %74 = load i64, i64* @groot_len, align 8
  %75 = sub i64 %73, %74
  %76 = call i32 @QueryDosDeviceA(i8* %69, i8* %71, i64 %75)
  %77 = icmp ne i32 %76, 0
  br i1 %77, label %78, label %81

78:                                               ; preds = %60
  %79 = call i32 @strlen(i8* %22)
  %80 = icmp slt i32 %79, 20
  br i1 %80, label %81, label %103

81:                                               ; preds = %78, %60
  %82 = getelementptr inbounds [64 x i8], [64 x i8]* %14, i64 0, i64 0
  %83 = call i32 (...) @WindowsErrorString()
  %84 = call i32 (i8*, ...) @suprintf(i8* getelementptr inbounds ([46 x i8], [46 x i8]* @.str.3, i64 0, i64 0), i8* %82, i32 %83)
  %85 = load i32, i32* %9, align 4
  %86 = icmp ne i32 %85, 0
  br i1 %86, label %88, label %87

87:                                               ; preds = %81
  br label %111

88:                                               ; preds = %81
  %89 = load i64, i64* %5, align 8
  %90 = load i32, i32* %7, align 4
  %91 = icmp ne i32 %90, 0
  %92 = zext i1 %91 to i64
  %93 = select i1 %91, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.5, i64 0, i64 0), i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str.6, i64 0, i64 0)
  %94 = load i64*, i64** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @SelectedDrive, i32 0, i32 1), align 8
  %95 = load i64, i64* %10, align 8
  %96 = getelementptr inbounds i64, i64* %94, i64 %95
  %97 = load i64, i64* %96, align 8
  %98 = load i32*, i32** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @SelectedDrive, i32 0, i32 2), align 8
  %99 = load i64, i64* %10, align 8
  %100 = getelementptr inbounds i32, i32* %98, i64 %99
  %101 = load i32, i32* %100, align 4
  %102 = call i32 (i8*, i8*, i64, i8*, ...) @static_sprintf(i8* %22, i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str.4, i64 0, i64 0), i64 %89, i8* %93, i64 %97, i32 %101)
  br label %109

103:                                              ; preds = %78
  %104 = load i32, i32* %7, align 4
  %105 = icmp ne i32 %104, 0
  br i1 %105, label %106, label %108

106:                                              ; preds = %103
  %107 = call i32 @static_strcat(i8* %22, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.5, i64 0, i64 0))
  br label %108

108:                                              ; preds = %106, %103
  br label %109

109:                                              ; preds = %108, %88
  %110 = call i8* @safe_strdup(i8* %22)
  store i8* %110, i8** %11, align 8
  br label %111

111:                                              ; preds = %109, %87, %57, %53
  %112 = load i8*, i8** %11, align 8
  %113 = load i8*, i8** %12, align 8
  call void @llvm.stackrestore(i8* %113)
  ret i8* %112
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @CheckDriveIndex(i64) #2

declare dso_local i32 @suprintf(i8*, ...) #2

declare dso_local i32 @static_sprintf(i8*, i8*, i64, i8*, ...) #2

declare dso_local i32 @static_strcpy(i8*, i32) #2

declare dso_local i32 @QueryDosDeviceA(i8*, i8*, i64) #2

declare dso_local i32 @strlen(i8*) #2

declare dso_local i32 @WindowsErrorString(...) #2

declare dso_local i32 @static_strcat(i8*, i8*) #2

declare dso_local i8* @safe_strdup(i8*) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
